2011-05-26  Geoffrey Garen  <ggaren@apple.com>

Reviewed by Geoffrey Garen.

        Factored out some Heap ASSERTs
        https://bugs.webkit.org/show_bug.cgi?id=61565

        * JavaScriptCore.exp:
        * heap/Heap.cpp:
        (JSC::isValidSharedInstanceThreadState):
        (JSC::isValidThreadState):
        (JSC::Heap::markRoots):
        (JSC::Heap::isValidAllocation):
        * heap/Heap.h:
        * runtime/JSCell.h:
        (JSC::JSCell::Heap::allocate):


Canonical link: https://commits.webkit.org/76980@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@87434 268f45cc-cd09-0410-ab3c-d52691b4dbfc