Source/JavaScriptCore/heap/Heap.h
@@ -116,6 +116,7 @@ namespace JSC {
         static const size_t minExtraCost = 256;
         static const size_t maxExtraCost = 1024 * 1024;
 
+        bool isValidAllocation(size_t);
         void* allocateSlowCase(size_t);
         void reportExtraMemoryCostSlowCase(size_t);
 
